force-app/main/default/objects/Attachments_Plus__c/fields/Additional_Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Requested__c</fullName>
    <label>Additional Information Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time Records</fullName>
            </value>
            <value>
                <fullName>Payroll Records</fullName>
            </value>
            <value>
                <fullName>Self-Audit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>