force-app/main/default/objects/Attachments_Plus__c/fields/Agreement_to_cure__c.field-meta.xml
<CustomField>
    <fullName>Agreement_to_cure__c</fullName>
    <label>Agreement to cure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimum Wage</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Meal and rest breaks</fullName>
            </value>
            <value>
                <fullName>Other Unpaid Wages</fullName>
            </value>
            <value>
                <fullName>Reimbursement of employee expenses</fullName>
            </value>
            <value>
                <fullName>Indemnification of employees by employer (Labor Code §2800)</fullName>
            </value>
            <value>
                <fullName>Violation of Labor Code §226</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>