force-app/main/default/objects/Attachments_Plus__c/fields/Amendment_Information_for_PAGA__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Information_for_PAGA__c</fullName>
    <label>Amendment Information for PAGA</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>