force-app/main/default/objects/Attachments_Plus__c/fields/Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>Attachment_ID__c</fullName>
    <label>Attachment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>