force-app/main/default/objects/Attachments_Plus__c/fields/Attachment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Needed__c</fullName>
    <description>updated via process builder</description>
    <label>Attachment Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>