force-app/main/default/objects/Attachments_Plus__c/fields/Attorney_Client_Privilege__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Client_Privilege__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to indicate that this document is subject to attorney-client privilege.</inlineHelpText>
    <label>Attorney-Client Privilege</label>
    <type>Checkbox</type>
</CustomField>