force-app/main/default/objects/Attachments_Plus__c/fields/Attorneys_Fees__c.field-meta.xml
<CustomField>
    <fullName>Attorneys_Fees__c</fullName>
    <label>Attorneys Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>