force-app/main/default/objects/Attachments_Plus__c/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to indicate that this document is considered confidential</inlineHelpText>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>