force-app/main/default/objects/Attachments_Plus__c/fields/Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Content_URL__c</fullName>
    <label>Content URL</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>