force-app/main/default/objects/Attachments_Plus__c/fields/Court_Name__c.field-meta.xml
<CustomField>
    <fullName>Court_Name__c</fullName>
    <label>Court Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>