force-app/main/default/objects/Attachments_Plus__c/fields/Cure_Conference_Date__c.field-meta.xml
<CustomField>
    <fullName>Cure_Conference_Date__c</fullName>
    <label>Cure Conference Date</label>
    <type>Date</type>
</CustomField>