force-app/main/default/objects/Attachments_Plus__c/fields/Cure_Dispute_Status__c.field-meta.xml
<CustomField>
    <fullName>Cure_Dispute_Status__c</fullName>
    <description>For Cure Disputes, this is the status.</description>
    <inlineHelpText>For Cure Disputes, this is the status.</inlineHelpText>
    <label>Cure Dispute Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screened/No Action</fullName>
            </value>
            <value>
                <fullName>Screened/To be evaluated</fullName>
            </value>
            <value>
                <fullName>Evaluated/Employer Extension</fullName>
            </value>
            <value>
                <fullName>Evaluated/Cure Decision</fullName>
            </value>
            <value>
                <fullName>Evaluated/No Cure Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>