force-app/main/default/objects/Attachments_Plus__c/fields/Cure_Proposal_Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Cure_Proposal_Timeliness__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, "Employer Cure Proposal (Small Employer Cure)"),(Date_PAGA_Notice_Received_by_Employer__c + 33),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cure Proposal Timeliness</label>
    <type>Date</type>
</CustomField>