force-app/main/default/objects/Attachments_Plus__c/fields/Cure_Response_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Cure_Response_Deadline_Date__c</fullName>
    <formula>Case_Management__r.Cure_Dispute_Submission_Date__c + 17</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cure Response Deadline Date</label>
    <type>Date</type>
</CustomField>