force-app/main/default/objects/Attachments_Plus__c/fields/Date_of_PAGA_Notice__c.field-meta.xml
<CustomField>
    <fullName>Date_of_PAGA_Notice__c</fullName>
    <label>Date of PAGA Notice</label>
    <type>Date</type>
</CustomField>