force-app/main/default/objects/Attachments_Plus__c/fields/Date_PAGA_Notice_Received_by_Employer__c.field-meta.xml
<CustomField>
    <fullName>Date_PAGA_Notice_Received_by_Employer__c</fullName>
    <label>Date PAGA Notice Received by Employer</label>
    <type>Date</type>
</CustomField>