force-app/main/default/objects/Attachments_Plus__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <inlineHelpText>When was this form first officially submitted?</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>