force-app/main/default/objects/Attachments_Plus__c/fields/Date_to_Complete_Cure__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Complete_Cure__c</fullName>
    <label>Date to Complete Cure</label>
    <type>Date</type>
</CustomField>