force-app/main/default/objects/Attachments_Plus__c/fields/Employee_Cure_Dispute_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Cure_Dispute_Submission_Date__c</fullName>
    <label>Employee Cure Dispute Submission Date</label>
    <type>Date</type>
</CustomField>