force-app/main/default/objects/Attachments_Plus__c/fields/Employer_Cure_Proposal_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Employer_Cure_Proposal_Submission_Date__c</fullName>
    <label>Employer Cure Proposal Submission Date</label>
    <type>Date</type>
</CustomField>