force-app/main/default/objects/Attachments_Plus__c/fields/Employer_Cure_Verification_Submission__c.field-meta.xml
<CustomField>
    <fullName>Employer_Cure_Verification_Submission__c</fullName>
    <label>Employer Cure Verification Submission</label>
    <type>Date</type>
</CustomField>