force-app/main/default/objects/Attachments_Plus__c/fields/Employer_IFP_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Employer_IFP_Claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IFP Claimed from Employer Response</description>
    <label>Employer IFP Claimed</label>
    <type>Checkbox</type>
</CustomField>