force-app/main/default/objects/Attachments_Plus__c/fields/Employer_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Employer_Street_Address__c</fullName>
    <label>Employer Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>