force-app/main/default/objects/Attachments_Plus__c/fields/Employer_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Employer_Zip_Postal_Code__c</fullName>
    <label>Employer Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>