force-app/main/default/objects/Attachments_Plus__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>If this document has an expiration date or will need to be renewed by a certain date, please enter that date here.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>