force-app/main/default/objects/Attachments_Plus__c/fields/File_ID__c.field-meta.xml
<CustomField>
    <fullName>File_ID__c</fullName>
    <label>File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>