force-app/main/default/objects/Attachments_Plus__c/fields/File_URL__c.field-meta.xml
<CustomField>
    <fullName>File_URL__c</fullName>
    <description>URL of file attached to the record.</description>
    <label>File URL</label>
    <type>Url</type>
</CustomField>