force-app/main/default/objects/Attachments_Plus__c/fields/File_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>File_Version_ID__c</fullName>
    <description>The content version ID of the latest document linked to this record</description>
    <label>File Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>