force-app/main/default/objects/Attachments_Plus__c/fields/Form_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Section_Name__c</fullName>
    <description>Refers to the form wizard section by the name of the section on which this should appear. Should be entered exactly as the template section named</description>
    <inlineHelpText>Enter the name of the form section that this record should appear on</inlineHelpText>
    <label>Form Section Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>