force-app/main/default/objects/Attachments_Plus__c/fields/Hearing_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Outcome__c</fullName>
    <label>Hearing Outcome:</label>
    <type>TextArea</type>
</CustomField>