force-app/main/default/objects/Attachments_Plus__c/fields/IEE_Labor_Code_2800_Amount__c.field-meta.xml
<CustomField>
    <fullName>IEE_Labor_Code_2800_Amount__c</fullName>
    <label>IEE (Labor Code §2800) - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>