force-app/main/default/objects/Attachments_Plus__c/fields/IFP_Claimed__c.field-meta.xml
<CustomField>
    <fullName>IFP_Claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IFP Claimed</label>
    <type>Checkbox</type>
</CustomField>