force-app/main/default/objects/Attachments_Plus__c/fields/Issued_by__c.field-meta.xml
<CustomField>
    <fullName>Issued_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Submission_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>