force-app/main/default/objects/Attachments_Plus__c/fields/Last_Name_of_Person_who_filed_PAGA_Clai__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_of_Person_who_filed_PAGA_Clai__c</fullName>
    <label>Last Name of Person who filed  PAGA Clai</label>
    <length>255</length>
    <type>Text</type>
</CustomField>