force-app/main/default/objects/Attachments_Plus__c/fields/LC_226_Violations_Cured__c.field-meta.xml
<CustomField>
    <fullName>LC_226_Violations_Cured__c</fullName>
    <label>LC 226 Violations Cured</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross Wages Earned</fullName>
            </value>
            <value>
                <fullName>Total Hours Worked</fullName>
            </value>
            <value>
                <fullName>Piece Rate Units</fullName>
            </value>
            <value>
                <fullName>Deductions</fullName>
            </value>
            <value>
                <fullName>Net Wages Earned</fullName>
            </value>
            <value>
                <fullName>Pay period dates</fullName>
            </value>
            <value>
                <fullName>Employer legal entity name/address</fullName>
            </value>
            <value>
                <fullName>All applicable hourly rates + Number of hrs at each rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>