force-app/main/default/objects/Attachments_Plus__c/fields/Manual_Screen_Status_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Manual_Screen_Status_Changed_By__c</fullName>
    <description>Tracks user and time "Manual Screen Status" is changed</description>
    <label>Manual Screen Status Changed By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>