force-app/main/default/objects/Attachments_Plus__c/fields/MRVR_Unpaid_Wages__c.field-meta.xml
<CustomField>
    <fullName>MRVR_Unpaid_Wages__c</fullName>
    <label>MRVR-Unpaid Wages,</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>