force-app/main/default/objects/Attachments_Plus__c/fields/MW_Interest__c.field-meta.xml
<CustomField>
    <fullName>MW_Interest__c</fullName>
    <label>MW- Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>