force-app/main/default/objects/Attachments_Plus__c/fields/MW_Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>MW_Liquidated_Damages__c</fullName>
    <label>MW- Liquidated Damages,</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>