force-app/main/default/objects/Attachments_Plus__c/fields/Notice_Filer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Notice_Filer_Email_Address__c</fullName>
    <label>Submitter Email Address</label>
    <type>Email</type>
</CustomField>