force-app/main/default/objects/Attachments_Plus__c/fields/Notice_Filer_Information__c.field-meta.xml
<CustomField>
    <fullName>Notice_Filer_Information__c</fullName>
    <formula>"Name:" &amp; Notice_Filer_Name__c &amp;
"Mobile:" &amp; Notice_Filer_Mobile_Phone__c &amp;
"Phone:" &amp; Notice_Filer_Work_Phone__c &amp;
"Email:" &amp; Notice_Filer_Email_Address__c &amp;
"Address:" &amp; Notice_Filer_Street_Address__c &amp;
 Notice_Filer_City__c &amp; Notice_Filer_State__c &amp; Notice_Filer_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitter Information</label>
    <type>Text</type>
</CustomField>