force-app/main/default/objects/Attachments_Plus__c/fields/Notice_Filer_Name__c.field-meta.xml
<CustomField>
    <fullName>Notice_Filer_Name__c</fullName>
    <label>Submitter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>