force-app/main/default/objects/Attachments_Plus__c/fields/Notice_Filer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Notice_Filer_Zip_Code__c</fullName>
    <label>Submitter Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>