force-app/main/default/objects/Attachments_Plus__c/fields/OUW_Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>OUW_Liquidated_Damages__c</fullName>
    <label>OUW - Liquidated Damages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>