force-app/main/default/objects/Attachments_Plus__c/fields/PAGA_Hearing_Time__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Hearing_Time__c</fullName>
    <label>Hearing Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>