force-app/main/default/objects/Attachments_Plus__c/fields/PAGA_Penalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Penalty_Amount__c</fullName>
    <description>PAGA penalty amount from the Court Order/Judgement</description>
    <inlineHelpText>PAGA penalty amount from the Court Order/Judgement</inlineHelpText>
    <label>Penalty Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>