force-app/main/default/objects/Attachments_Plus__c/fields/Party_Submitting_Cure_Documents__c.field-meta.xml
<CustomField>
    <fullName>Party_Submitting_Cure_Documents__c</fullName>
    <label>Party Submitting Cure Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plaintiff/Aggrieved Employee</fullName>
            </value>
            <value>
                <fullName>Defendant/Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>