force-app/main/default/objects/Attachments_Plus__c/fields/Pay_period_covered_by_Small_Emp_Cure__c.field-meta.xml
<CustomField>
    <fullName>Pay_period_covered_by_Small_Emp_Cure__c</fullName>
    <label>Pay period covered by Small Emp Cure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>