force-app/main/default/objects/Attachments_Plus__c/fields/Pay_periods_covered_by_cure__c.field-meta.xml
<CustomField>
    <fullName>Pay_periods_covered_by_cure__c</fullName>
    <label>Pay periods covered by cure</label>
    <type>TextArea</type>
</CustomField>