force-app/main/default/objects/Attachments_Plus__c/fields/Reg_Related_Rec_Id__c.field-meta.xml
<CustomField>
    <fullName>Reg_Related_Rec_Id__c</fullName>
    <description>Registration Related Record Id. This field is used by Registration Services to store the related Registration record.</description>
    <externalId>true</externalId>
    <label>Reg Related Rec Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>