force-app/main/default/objects/Attachments_Plus__c/fields/Registration_Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Registration_Document_Category__c</fullName>
    <description>Value set when the record is created from the attachment bank record</description>
    <label>Registration Document Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>