force-app/main/default/objects/Attachments_Plus__c/fields/Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>Registration_ID__c</fullName>
    <formula>Registration__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration ID</label>
    <type>Text</type>
</CustomField>